@@ -17,7 +17,6 @@
 
 package com.acme.provider.legacy.jpa.entity;
 
-import java.util.Collections;
 import java.util.Map;
 import org.keycloak.it.TestProvider;
 
@@ -25,11 +24,11 @@ public class CustomJpaEntityProvider implements TestProvider {
 
     @Override
     public Class[] getClasses() {
-        return new Class[] { Realm.class };
+        return new Class[] { Realm.class, KeycloakItH2Dialect.class, UnlistedEntity.class, OrmMappedEntity.class };
     }
 
     @Override
     public Map<String, String> getManifestResources() {
-        return Collections.singletonMap("persistence.xml", "persistence.xml");
+        return Map.of("persistence.xml", "persistence.xml", "orm.xml", "orm.xml");
     }
 }
